# bootstrap

./: AGENTS.md  AUTORESEARCH.md  CONTRIBUTING.md  Cargo.toml  README.md  RESULTS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: bench.yml  scorekeeper.yml  verify.yml
benches/: bootstrap.rs
docs/: app.js  index.html
docs/data/: leaderboard.json
fixtures/: baselines.tsv
history/: README.md
history/entries/: 0000-baseline.md  0001--10d9e.md  0001-baseline.md  0002--10d9e.md  0003--10d9e.md  0004--10d9e.md  0005--10d9e.md
scripts/: build-leaderboard.py  ci-score-gate.sh  ci-score.sh  evaluate.sh  guard-pr.sh  guard.sh  record.sh  submit.sh
src/: lib.rs  main.rs
src/algorithm/: fft.rs  mod.rs
src/harness/: eval.rs  fixtures.rs  mod.rs  params.rs  security.rs
tests/: correctness.rs
